--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: admins
+#
+#  id              :integer          not null, primary key
+#  password_digest :string
+#  username        :string
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 #one:
 #  username: MyString
